--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 requests = "*"
 python-dotenv = "*"
 flask-caching = "*"
+pymongo = {extras = ["srv"], version = "*"}
 
 [dev-packages]
 
