--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ blinker==1.9.0; python_version >= '3.9'
 cachelib==0.13.0; python_version >= '3.8'
 certifi==2025.4.26; python_version >= '3.6'
 charset-normalizer==3.4.2; python_version >= '3.7'
-click==8.1.8; python_version >= '3.7'
+click==8.2.1; python_version >= '3.10'
 dnspython==2.7.0; python_version >= '3.9'
 flask==3.1.1; python_version >= '3.9'
 flask-caching==2.3.1; python_version >= '3.8'
+flask-cors==6.0.0; python_version >= '3.9' and python_version < '4.0'
 idna==3.10; python_version >= '3.6'
-importlib-metadata==8.7.0; python_version < '3.10'
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.6; python_version >= '3.7'
 markupsafe==3.0.2; python_version >= '3.9'
@@ -17,4 +17,3 @@ python-dotenv==1.1.0; python_version >= '3.9'
 requests==2.32.3; python_version >= '3.8'
 urllib3==2.4.0; python_version >= '3.9'
 werkzeug==3.1.3; python_version >= '3.9'
-zipp==3.22.0; python_version >= '3.9'
