--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ python-dotenv = "*"
 flask-caching = "*"
 pymongo = {extras = ["srv"], version = "*"}
 flask-cors = "*"
+pytz = "*"
 
 [dev-packages]
 
