--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ jinja2==3.1.6; python_version >= '3.7'
 markupsafe==3.0.2; python_version >= '3.9'
 pymongo[srv]==4.13.0; python_version >= '3.9'
 python-dotenv==1.1.0; python_version >= '3.9'
+pytz==2025.2
 requests==2.32.3; python_version >= '3.8'
 urllib3==2.4.0; python_version >= '3.9'
 werkzeug==3.1.3; python_version >= '3.9'
